src/scss/components/_slider.scss
.slider {
  position: relative;
  margin: 8rem 0 5rem;

  @include desktop {
    padding: 0 9rem;
  }
  @include tablet {
    padding: 0 4.5rem;
  }
  @include mobile {
    padding: 0 4rem;
  }

  @include sm-mobile {
    padding: 0 1.5rem;
  }

  .course-card__item {
    margin: .5rem;

    @include mobile {
      margin: .5rem 3rem;
    }
    &:hover {
      background-color: $secondary;
      z-index: 2;

      &::before {
        box-shadow: 9px 7px 20px rgba($tertiary, .7);
        background-color: $secondary;
      }

      .course-card__item--author p {
        color: $tertiary;
      }

      .course-card__item--description {
        color: $tertiary;
      }

      .course-card__item--features .banner__info {
        background-color: rgba($tertiary, .3);
        color: $tertiary;
      }
    }
  }

  .swiper-slide {
    background: none;
    text-align: left;
  }

  &__container {
    max-width: 120rem;
    margin: 0 auto;

    @include sm-desktop {
      max-width: 70rem;
    }

    @include tablet {
      max-width: 40rem;
    }

    @include mobile {
      max-width: 35rem;
    }
  }

  &__navigation {
    position: absolute;
    top: 50%;
    width: auto;

    &::after {
      position: absolute;
      top: 50%;
      display: none;
    }

    &.swiper-button-prev {
      left: 0;
      justify-content: flex-start;
      img {
        @include tablet {
          width: 50%;
        }
      }
    }

    &.swiper-button-next {
      right: 0;
      justify-content: flex-end;
      img {
        @include tablet {
          width: 50%;
        }
      }
    }
  }


  .slider-author {
    margin-top: 5rem;

    .swiper-pagination-bullet {
      background: transparent;
      opacity: 1;
      position: relative;
      height: 40px;
      width: 40px;

      &::after {
        content: "";
        height: 10px;
        width: 10px;
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
        background-color: $secondary;
        border-radius: 50%;
      }

      &.swiper-pagination-bullet-active::after {
        height: 20px;
        width: 20px;
      }
    }

  }
}

